fix: overflow hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
 
 * {
   overscroll-behavior: none;
+  overflow: hidden;
 }
 
 @layer base {
